2012-06-21  Parth Patel  <parpatel@rim.com>

        [Blackberry] BlackBerry::Platform::Settings::get() rename to BlackBerry::Platform::Settings::instance() to make it consistent with our other singletons
        https://bugs.webkit.org/show_bug.cgi?id=89684

        Reviewed by Yong Li.
        
        Update setting instance access to use instance() instead of get().

        * wtf/ThreadingPthreads.cpp:
        (WTF::createThreadInternal):

2012-06-21  Kalev Lember  <kalevlember@gmail.com>

        [GTK] Fix NPAPI plugins on Windows
        https://bugs.webkit.org/show_bug.cgi?id=54531

        Reviewed by Martin Robinson.

        Define ENABLE_PLUGIN_PACKAGE_SIMPLE_HASH for the GTK+ port, and
        include OwnPtrWin.cpp in the list of files built on Windows.

        * GNUmakefile.am:
        * GNUmakefile.list.am:
        * wtf/Platform.h:

2012-06-21  Balazs Kelemen  <kbalazs@webkit.org>

        Compile error: 'bool std::isinf(float)' is not 'constexpr' with GCC 4.6 in C++11 mode
        https://bugs.webkit.org/show_bug.cgi?id=88721

        Reviewed by Csaba Osztrogonác.

        Don't define these as consexpr because with gcc 4.6
        they call non constexpr functions.
        * wtf/MathExtras.h:
        (std::wtf_isinf):
        (std::wtf_isnan):

2012-06-17  Filip Pizlo  <fpizlo@apple.com>

        It should be possible to look at disassembly
        https://bugs.webkit.org/show_bug.cgi?id=89319

        Reviewed by Sam Weinig.
        
        Made changes to Assertions.h to make it friendly to C code again.
        
        Added ENABLE(DISASSEMBLER) and USE(UDIS86) logic to Platform.h.

        * wtf/Assertions.h:
        * wtf/Platform.h:

2012-06-19  Jon Honeycutt  <jhoneycutt@apple.com>

        REGRESSION(r120552): Many tests timing out on Windows
        https://bugs.webkit.org/show_bug.cgi?id=89433

        Reviewed by Andy Estes.

        * wtf/CurrentTime.cpp:
        (WTF::lowResUTCTime):
        It looks like there were two bugs: